# DataBinder

./: .mypy.ini  .pylintrc  README.md  pyproject.toml  setup.py  test.py
DataBinder/Algorithms/: GraphEnvironments.py  TopologyEnvironments.py  __init__.py  topology_environments.py
DataBinder/Assumptions/: Assumptions.py  __init__.py
DataBinder/Binders/: __init__.py  data_topology.py
DataBinder/Classes/: Condition.py  DataContainer.py  Model.py  Topology.py  __init__.py  conditions.py  data_container.py  topology_components.py
DataBinder/Compilers/: __init__.py
DataBinder/Compilers/Topology/: AdjacencyMatrix.py  __init__.py  equation_system.py  to_equation.py  to_function.py
DataBinder/Compilers/topology/: __init__.py  to_adjacency_matrix.py  to_equation.py  (+3 more)
DataBinder/Constructors/: DataContainer.py  Topology.py  Transformation.py  __init__.py
DataBinder/Inspectors/: Units.py  __init__.py  patterns.py  test_for.py
DataBinder/Visualisation/: Layouts.py  __init__.py
doc/: DataBinder.html  Makefile  index.html  search.js
doc/DataBinder/: Algorithms.html  Assumptions.html  Binders.html  Classes.html  Compilers.html  Constructors.html  Decompilers.html  Inspectors.html  Visualisation.html
example_data/: exampleData.csv  trypsin_oscillator.txt
examples/: algo_test.py  assumptions_test.py  entity_environments.py  functionality_test.py  test_matrix.py  thiol_oscillator.py  to_equation.py  transformation_environments.py  trypsin_oscillator.py
examples/data/: exampleData_2.csv  simple_reaction_list.txt  thiol_network.txt  trypsin_oscillator.txt
(+63 files in other folders)
